konpu-macros/tests/ui/fail_identity_eq_op.rs
#[konpu::monoid(op = "op", identity = "op")]
struct IdentityEqOp;